<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CafeMainActivity"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeCafeHouse"
        android:textColor="@color/light_blue"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"

        />

    <EditText
        android:id="@+id/order1_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/order1Txt"
        android:autofillHints="name"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/order2_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/order2Txt"
        android:autofillHints="name"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/order3_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/order3Txt"
        android:autofillHints="name"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textPersonName"
        />
    <EditText
        android:id="@+id/order4_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/order3Txt"
        android:autofillHints="name"
        android:layout_margin="15dp"
        android:textSize="20sp"
        android:ems="10"
        android:inputType="textPersonName"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/backToMainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:text="@string/backToMainActivity"
            android:textSize="15sp"
            android:layout_marginRight="10dp"
            android:paddingHorizontal="20dp"
            />
        <Button
            android:id="@+id/orderNow_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="40dp"
            android:text="@string/orderNow"
            android:textSize="15sp"
            android:paddingHorizontal="20dp"
            />
    </LinearLayout>

</LinearLayout>