<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMsg"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/navigateSecondScreen"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/letsGoTxt"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/navigateCafeHouseScreen"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/navigateCafe"
        android:textSize="16sp"
        />

</LinearLayout>