<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".TechnologyListScreen"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/technologiesListHeader"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/android_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameAndroid"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/ios_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameIos"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/web_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameWeb"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/ml_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameML"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/dl_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameDL"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/nlp_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameNLP"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/rl_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameRL"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/tl_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameTL"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/gan_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameGAN"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/crossPlatform_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameCrossPlatform"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/fastApi_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            android:layout_marginHorizontal="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameFastApi"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/db_id"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/aNameDB"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tech_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:background="@color/light_blue"
        android:padding="16dp"
        android:orientation="vertical" />

    <!-- Button at the bottom -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phoneCall_id"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/aNamePhoneCall"
        android:textSize="17sp" />

</LinearLayout>